client/src/styles/AddFriendSquare.module.css
.outerSquare {
  background-color: var(--limed-spruce);
  width: 100px;
  height: 150px;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: space-between;
  padding: 10px;
  margin: auto 20px;
  border-radius: 20px;
  box-shadow: 0px 10px 5px var(--black-haze-shadow);
}

.innerSquare {
  background-color: var(--black-haze);
  width: 80px;
  height: 60px;
  border-radius: 12px;
  box-shadow: inset 0px 10px 5px var(--black-haze-shadow);
}

.friendIcon {
  color: var(--elm);
  height: 40px;
  width: 40px;
  margin: 10px 20px;
}

.friendUsername {
  color: var(--black-haze);
  margin: 5px 0;
  text-shadow: 0px 3px 3px var(--limed-spruce-shadow);
  font-size: 15px;
}

.friendAddButton {
  margin: 0px auto 5px auto;
}

